# siwir

./: Makefile  README  README.md  main.cpp  matrix.cpp  matrix.h
ConjugateGradients/: CMakeLists.txt  Makefile  grid.h
ConjugateGradients/include/: grid.h
ConjugateGradients/src/: CMakeLists.txt  grid.cpp  main.cpp  main.cpp.autosave
GaussSeidel/: Makefile  grid.cpp  grid.h  main.cpp  matrix.cpp  matrix.h  testscript
RayTracing/: CMakeLists.txt  Makefile
RayTracing/include/: cell.h  grid.h  ray.h
RayTracing/src/: CMakeLists.txt  grid.cpp  main.cpp
Strassen/: matrix.cpp
